# cowedev-backend

./: .gitignore  Cargo.toml  flake.nix  postgres.sh  shell.nix
migrations/: 20250827125039_initial_posts_models.sql  20250827132237_posts.up.sql
src/: main.rs
src/routes/: api.rs  mod.rs  posts.rs  static.rs
src/types/: mod.rs
