[package]
name = "cowedev-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "chrono"]}
tokio = { version = "1.47.1", features = ["full"]}

serde = "1.0.219"
serde_json = "1.0.142"
dotenv = "0.15.0"
tower-http = { version = "0.6.6", features = ["fs"]}
chrono = { version = "0.4.42", features = ["serde"]}
